--- a/front-end/styles/register.css
+++ b/front-end/styles/register.css
@@ -10,6 +10,10 @@
   display: flex;
   align-items: center;
 }
+#container-login h1 {
+  margin-top: 20px;
+  color: #fff;
+}
 #form-login {
   display: flex;
   justify-content: center;
@@ -19,7 +23,7 @@
   height: 400px;
   background-color: #f2f3f5;
   border-radius: 20px;
-  margin-top: 5em;
+  margin-top: 2em;
 }
 
 .form-label {
@@ -27,6 +31,21 @@
   margin: 10px 0 10px 0;
 }
 
+.form-input {
+  border-radius: 5px;
+  text-align: center;
+}
+
+.container-buttons {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
 .form-buttons {
-  margin-top: 10px;
+  background-color: #ebecf0;
+  border: 1px solid #808080;
+  border-radius: 5px;
+  width: 100px;
 }
