--- a/front-end/styles/styles.css
+++ b/front-end/styles/styles.css
@@ -53,9 +53,15 @@ header h1 {
 .header-login {
   display: flex;
   flex-direction: row;
-  justify-content: right;
+  justify-content: center;
+  gap: 50em;
   padding: 15px;
   font-size: 20px;
+  background-color: #fdd037;
+}
+
+.header-login a {
+  text-decoration: none;
 }
 
 #filter-task {
