--- a/front-end/src/styles/register.css
+++ b/front-end/src/styles/register.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   width: 450px;
-  height: 400px;
+  height: 460px;
   background-color: #f2f3f5;
   border-radius: 20px;
   margin-top: 2em;
@@ -48,4 +48,10 @@
   border: 1px solid #808080;
   border-radius: 5px;
   width: 150px;
+}
+
+#registerResult {
+  margin-top: 1em;
+  width: 70%;
+  text-align: center;
 }
