--- a/front-end/src/styles/styles.css
+++ b/front-end/src/styles/styles.css
@@ -125,6 +125,10 @@ li {
   color: black;
 }
 
+.taskText {
+  word-break: break-all;
+}
+
 #container-login {
   display: flex;
   flex-direction: column;
